// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots should render ChooseRoom 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 16,
        "marginBottom": 50,
      }
    }
  >
    Hello, 
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "flex-start",
        "marginBottom": 5,
        "textAlign": "center",
      }
    }
  >
    Create room
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "flex-start",
        "color": "#980f0f",
        "marginBottom": 5,
        "textAlign": "center",
      }
    }
  />
  <Component
    allowFontScaling={true}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    style={
      Object {
        "borderWidth": 1,
        "height": 30,
        "marginBottom": 20,
        "width": "100%",
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "borderWidth": 1,
        "marginBottom": 10,
        "padding": 3,
        "width": "70%",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Play
    </Text>
  </ForwardRef>
  <View
    style={
      Object {
        "marginTop": 20,
        "width": "80%",
      }
    }
  />
</View>
`;

exports[`Snapshots should render ChooseUsername 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "flex-start",
        "marginBottom": 5,
        "textAlign": "center",
      }
    }
  >
    Username
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "flex-start",
        "color": "#980f0f",
        "marginBottom": 5,
        "textAlign": "center",
      }
    }
  />
  <Component
    allowFontScaling={true}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    style={
      Object {
        "borderWidth": 1,
        "height": 30,
        "marginBottom": 20,
        "width": "100%",
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "borderWidth": 1,
        "marginBottom": 30,
        "padding": 3,
        "width": "70%",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Next
    </Text>
  </ForwardRef>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "borderWidth": 1,
        "marginBottom": 30,
        "padding": 3,
        "width": "70%",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Solo mode
    </Text>
  </ForwardRef>
</View>
`;

exports[`Snapshots should render Login 1`] = `
<Gameboy>
  <View
    style={
      Object {
        "alignItems": "center",
        "width": "60%",
      }
    }
  >
    <ChooseUsername
      setScreenNumber={[Function]}
    />
  </View>
</Gameboy>
`;
